# BFAST

./: AUTHORS  Align.c  AlignColorSpace.c  AlignColorSpace.h  AlignNTSpace.c  AlignNTSpace.h  AlignedEnd.c  AlignedEntry.c  AlignedRead.c  BError.c  BLib.c  BLib.h  BLibDefinitions.h  BfastBAFConvert.c  BfastBMFConvert.c  BfastBRG2Fasta.c  BfastFasta2BRG.c  BfastHeader.c  BfastIndex.c  BfastLocalAlign.c  BfastLocalAlign.h  BfastMatch.c  BfastMatch.h  BfastPostProcess.c  BfastPostProcess.h  COPYING  ChangeLog  FilterAlignments.c  FindMatches.c  FindMatches.h  INSTALL  InputOutputToFiles.c  InputOutputToFiles.h  LICENSE  Main.c  Main.h  Makefile.am  MatchesReadInputFiles.c  MatchesReadInputFiles.h  NEWS  (+15 more)
balign/: Align.c  Align.h  AlignColorSpace.c  AlignColorSpace.h  AlignNTSpace.c  AlignNTSpace.h  BError.c  Definitions.h  Makefile.am  ParseInput.c  ParseInput.h  ReadInputFiles.c  ReadInputFiles.h  RunAligner.c  RunAligner.h  ScoringMatrix.c  ScoringMatrix.h
bcommand/: bcommand.pl  bfast.ini  blatter.ini
bfast/: Align.c  Align.h  AlignColorSpace.c  AlignColorSpace.h  AlignMatrix.c  AlignMatrix.h  AlignNTSpace.c  AlignNTSpace.h  AlignedEnd.c  AlignedEnd.h  AlignedEntry.c  AlignedEntry.h  AlignedRead.c  AlignedRead.h  AlignedReadConvert.c  AlignedReadConvert.h  BError.c  BLib.c  BLib.h  BLibDefinitions.h  BfastAlign.c  BfastBAFConvert.c  BfastBMFConvert.c  BfastBRG2Fasta.c  BfastFasta2BRG.c  BfastHeader.c  BfastIndex.c  BfastLocalAlign.c  BfastLocalAlign.h  BfastMatch.c  BfastMatch.h  BfastPostProcess.c  BfastPostProcess.h  FilterAlignments.h  FindMatches.c  FindMatches.h  InputOutputToFiles.c  Main.c  Main.h  Makefile.am  (+26 more)
bfast/bwtbfast/: bntseq.c  bwaseqio.c  bwtaln.c  bwtaln.h  bwtbfast.c  bwtbfast.h  bwtbfast2.c  bwtbfast2.h  bwtbfast2_aux.c  bwtbfast2_aux.h  bwtbfast_aux.c  bwtbfast_aux.h  bwtindex.c  bwtmisc.c  occ_results.c  occ_results.h  stdaln.c  util.c  util.h
blib/: AlignEntries.c  AlignEntries.h  AlignEntriesConvert.c  AlignEntry.c  AlignEntry.h  AlignedEnd.c  AlignedEnd.h  AlignedEntry.c  AlignedEntry.h  AlignedRead.c  AlignedRead.h  AlignedReadConvert.c  AlignedReadConvert.h  BError.c  BError.h  BIndex.c  BIndex.h  BIndexExons.c  BIndexExons.h  BIndexLayout.c  BIndexLayout.h  BLib.c  BLib.h  BLibDefinitions.h  BMatch.c  BMatch.h  BMatches.c  BMatches.h  BRGBinary.c  BRGBinary.h  BRanges.c  BRanges.h  BReads.c  BReads.h  BReferenceGenome.c  BReferenceGenome.h  Makefile.am  QS.c  QS.h  RGBinary.c  (+24 more)
bmatches/: Definitions.h  FindMatches.c  FindMatches.h  Makefile.am  ParseInput.c  ParseInput.h  ReadInputFiles.c  ReadInputFiles.h
bpostprocess/: ConvertAlignments.c  ConvertAlignments.h  Definitions.h  Filter.c  Filter.h  FilterAlignments.c  FilterAlignments.h  InputOutputToFiles.c  InputOutputToFiles.h  Makefile.am  ParseInput.c  ParseInput.h  PrintOutputFiles.c  PrintOutputFiles.h  ReadInputFiles.c  ReadInputFiles.h  RunReport.c  RunReport.h
bpreprocess/: Definitions.h  GenerateIndex.c  GenerateIndex.h  GenerateTree.c  GenerateTree.h  Makefile.am  Makefile.bak  Makefile.in  ParseInput.c  ParseInput.h  ReadInputFiles.c  ReadInputFiles.h
brepair/: Makefile.am  ParseInput.c  ParseInput.h  Repair.c  Repair.h  RunRepair.c  RunRepair.h
butil/: Makefile.am  SimRead.c  SimRead.h  bafconvert.c  bafconvert.h  balignmentscoredistribution.c  balignmentscoredistribution.h  balignsim.c  berrordistribution.c  berrordistribution.h  bevalsim.c  bevalsim.h  bexonify.c  bexonify.h  bfix.c  bfix.h  bfixbaf.c  bfixbaf.h  bfixbif.c  bfixbif.h  bfixbmf.c  bfixbmf.h  bfixbrg.c  bfixbrg.h  bfixhash.c  bfixhash.h  bgeneratereads.c  bgeneratereads.h  bgeterrordistribution.c  bgeterrordistribution.h  bheader.c  bheader.h  bindexdist.c  bindexdist.h  bindexhist.c  bindexhist.h  bindexhistchr.c  bindexhistchr.h  bindexstat.c  bindexstat.h  (+22 more)
doc/: Makefile.am  balign.1  bcommand.1  bfast.1  blatter.1  bmatches.1  bpostprocess.1  bpreprocess.1  brepair.1  butil.1
manual/: bfast-book.bib  bfast-book.tex
scripts/: Makefile.am  aflib.c  aflib.h  bfast.resubmit.pl  bfast.submit.pl  ill2fastq.pl  psolid2fastq.pl  qseq2fastq.pl  solid2fastq.c  solid2fastq.pl
tests/: Makefile.am  README  make.reads.sh  test.balign.phi.x.174.sh  test.balign.sh  test.bmatches.phi.x.174.sh  test.bmatches.sh  test.bpostprocess.phi.x.174.sh  test.bpostprocess.sh  test.bpreprocess.1.phi.x.174.sh  test.bpreprocess.1.sh  test.bpreprocess.2.phi.x.174.sh  test.bpreprocess.2.sh  test.cleanup.sh  test.definitions.sh  test.diff.phi.x.174.sh  test.diff.sh  test.fasta2brg.sh  test.index.sh  test.initialize.sh  test.localalign.sh  test.match.sh  test.postprocess.sh  test.solid2fastq.sh  update.save.sh
tests/data/: data.tar.bz2
