EXTRA_DIST = LICENSE \
			 autogen.sh \
			 doc/bfast.1 doc/bpreprocess.1 doc/bmatches.1 doc/balign.1 doc/bpostprocess.1 doc/butil.1 \
			 blib/BLibDefinitions.h \
			 scripts/solid2fastq.pl \
			 scripts/qseq2fastq.pl \
			 tests/test.definitions.sh \
			 tests/data/data.tar.gz \
			 tests/test.initialize.sh \
			 tests/test.bpreprocess.1.sh \
			 tests/test.bpreprocess.2.sh \
			 tests/test.bmatches.sh \
			 tests/test.balign.sh \
			 tests/test.bpostprocess.sh \
			 tests/test.diff.sh \
			 tests/test.cleanup.sh
SUBDIRS = bpreprocess bmatches balign bpostprocess butil doc tests scripts 
