EXTRA_DIST = LICENSE \
			 autogen.sh \
			 manual/bfast-book.pdf \
			 blib/BLibDefinitions.h \
			 scripts/solid2fastq.pl \
			 scripts/qseq2fastq.pl \
			 scripts/bfast.submit.pl \
			 tests/test.definitions.sh \
			 tests/data/data.tar.gz \
			 tests/test.initialize.sh \
			 tests/test.bpreprocess.1.sh \
			 tests/test.bpreprocess.2.sh \
			 tests/test.bmatches.sh \
			 tests/test.balign.sh \
			 tests/test.bpostprocess.sh \
			 tests/test.diff.sh \
			 tests/test.cleanup.sh
SUBDIRS = bpreprocess bmatches balign bpostprocess butil tests scripts 
