bin_PROGRAMS = balign

balign_SOURCES = \
	RunAligner.c	RunAligner.h \
	ParseInput.c	ParseInput.h \
	ReadInputFiles.c	ReadInputFiles.h \
	../blib/BError.c	../blib/BError.h \
	../blib/BLib.c	../blib/BLib.h \
	../blib/RGMatches.c	../blib/RGMatches.h \
	../blib/RGMatch.c	../blib/RGMatch.h \
	../blib/RGRanges.c	../blib/RGRanges.h \
	../blib/RGBinary.c	../blib/RGBinary.h \
	../blib/RGIndex.c	../blib/RGIndex.h \
	../blib/AlignEntry.c	../blib/AlignEntry.h \
	../blib/AlignEntries.c	../blib/AlignEntries.h \
	AlignNTSpace.c	AlignNTSpace.h \
	AlignColorSpace.c	AlignColorSpace.h \
	Align.c		Align.h \
	Definitions.h
	
balign_LDADD = -lm 

