bin_PROGRAMS = balign

balign_SOURCES = \
	RunAligner.c	RunAligner.h \
	ParseInput.c	ParseInput.h \
	../blib/BError.c	../blib/BError.h \
	../blib/BLib.c	../blib/BLib.h \
	../blib/RGMatches.c	../blib/RGMatches.h \
	../blib/RGMatch.c	../blib/RGMatch.h \
	../blib/RGRanges.c	../blib/RGRanges.h \
	../blib/RGBinary.c	../blib/RGBinary.h \
	../blib/RGIndex.c	../blib/RGIndex.h \
	../blib/RGIndexAccuracy.c	../blib/RGIndexAccuracy.h \
    ../blib/RGIndexExons.c  ../blib/RGIndexExons.h \
	../blib/AlignedRead.c	../blib/AlignedRead.h \
	../blib/AlignedEnd.c	../blib/AlignedEnd.h \
	../blib/AlignedEntry.c	../blib/AlignedEntry.h \
	../blib/QS.c	../blib/QS.h \
	../blib/ScoringMatrix.c	../blib/ScoringMatrix.h \
	AlignNTSpace.c	AlignNTSpace.h \
	AlignColorSpace.c	AlignColorSpace.h \
	Align.c		Align.h \
	Definitions.h
	
balign_LDADD = -lm 
