bin_PROGRAMS = bfast 

bfast_SOURCES = \
				AlignedEnd.c AlignedEnd.h \
				AlignedEntry.c AlignedEntry.h \
				AlignedRead.c AlignedRead.h \
				AlignedReadConvert.c AlignedReadConvert.h \
				BError.c BError.h \
				BLib.c BLib.h \
				BLibDefinitions.h \
				RGBinary.c RGBinary.h \
				RGIndex.c RGIndex.h \
				RGIndexAccuracy.c RGIndexAccuracy.h \
				RGIndexExons.c RGIndexExons.h \
				RGIndexLayout.c RGIndexLayout.h \
				RGMatch.c RGMatch.h \
				RGMatches.c RGMatches.h \
				RGRanges.c RGRanges.h \
				RGReads.c RGReads.h \
				ScoringMatrix.c ScoringMatrix.h \
				Align.c Align.h \
				AlignNTSpace.c AlignNTSpace.h \
				AlignColorSpace.c AlignColorSpace.h \
				AlignMatrix.c AlignMatrix.h \
				MatchesReadInputFiles.c MatchesReadInputFiles.h \
				RunMatch.c RunMatch.h \
				RunLocalAlign.c RunLocalAlign.h \
				RunPostProcess.c RunPostProcess.h \
				RunAlign.c RunAlign.h \
				BfastFasta2BRG.c BfastFasta2BRG.h \
				BfastIndex.c BfastIndex.h \
				BfastMatch.c BfastMatch.h \
				BfastLocalAlign.c BfastLocalAlign.h \
				BfastPostProcess.c BfastPostProcess.h \
				BfastBAFConvert.c \
				BfastHeader.c \
				BfastBMFConvert.c \
				BfastBRG2Fasta.c \
				BfastAlign.c BfastAlign.h \
				bwtbfast/bwtindex.c \
				bwtbfast/bwt_gen.c bwtbfast/bwt_gen.h \
				bwtbfast/QSufSort.c bwtbfast/QSufSort.h \
				bwtbfast/is.c \
				bwtbfast/bwtmisc.c \
				bwtbfast/bwaseqio.c \
				bwtbfast/bwtio.c \
				bwtbfast/utils.c bwtbfast/utils.h \
				bwtbfast/bntseq.c bwtbfast/bntseq.h \
				bwtbfast/bwt.c bwtbfast/bwt.h \
				bwtbfast/bwtgap.c bwtbfast/bwtgap.h \
				bwtbfast/stdaln.c bwtbfast/stdaln.h \
				bwtbfast/bwtaln.c bwtbfast/bwtaln.h \
				bwtbfast/util.c bwtbfast/utils.h \
				bwtbfast/occ_results.c bwtbfast/occ_results.h \
				bwtbfast/bwtbfast2_aux.c bwtbfast/bwtbfast2_aux.h \
				bwtbfast/bwtbfast_aux.c bwtbfast/bwtbfast_aux.h \
				bwtbfast/bwtbfast2.c bwtbfast/bwtbfast2.h \
				bwtbfast/bwtbfast.c bwtbfast/bwtbfast.h \
				kseq.h \
				aflib.c aflib.h \
				Main.c Main.h

bfast_LDADD = 
