lib_LTLIBRARIES = lib-blib.la
lib_blib_la_SOURCES = AlignEntries.c  AlignEntries.h \
				  AlignEntry.c    AlignEntry.h \
				  BError.c    BError.h \
				  BLib.c	BLib.h \
				  RGBinary.c RGBinary.h \
				  RGIndex.c   RGIndex.h \
				  RGIndexExons.c  RGIndexExons.h \
				  RGIndexLayout.c	RGIndexLayout.h \
				  RGMatch.c RGMatch.h \
				  RGMatches.c RGMatches.h \
				  RGRanges.c RGRanges.h \
				  RGReads.c   RGReads.h 
