bin_PROGRAMS = bmatches

bmatches_SOURCES = \
	ReadInputFiles.c	ReadInputFiles.h \
	../blib/BError.c	../blib/BError.h \
	../blib/BLib.c	../blib/BLib.h \
	../blib/RGIndex.c	../blib/RGIndex.h \
	../blib/RGBinary.c	../blib/RGBinary.h \
	../blib/RGReads.c	../blib/RGReads.h \
	../blib/RGMatch.c	../blib/RGMatch.h \
	FindMatches.c	FindMatches.h \
	ParseInput.c	ParseInput.h \
	Definitions.h
	
bmatches_LDADD = -lm 
