bin_PROGRAMS = bpostprocess

bpostprocess_SOURCES = \
	../blib/BError.c	../blib/BError.h \
	../blib/BLib.c	../blib/BLib.h \
	../blib/RGIndex.c ../blib/RGIndex.h \
	../blib/RGBinary.c ../blib/RGBinary.h \
	../blib/RGMatch.c ../blib/RGMatch.h \
	../blib/RGRanges.c ../blib/RGRanges.h \
	ParseInput.c	ParseInput.h \
	Definitions.h
	
bpostprocess_LDADD = -lm 
