bin_PROGRAMS = bpostprocess

bpostprocess_SOURCES = \
					   ../blib/BError.c	../blib/BError.h \
					   ../blib/BLib.c	../blib/BLib.h \
					   ../blib/RGIndexExons.c  ../blib/RGIndexExons.h \
					   ../blib/RGIndex.c ../blib/RGIndex.h \
					   ../blib/RGBinary.c ../blib/RGBinary.h \
					   ../blib/RGMatch.c ../blib/RGMatch.h \
					   ../blib/RGRanges.c ../blib/RGRanges.h \
					   ../blib/AlignedReadConvert.c	../blib/AlignedReadConvert.h \
					   ../blib/AlignedRead.c   ../blib/AlignedRead.h \
					   ../blib/AlignedEnd.c    ../blib/AlignedEnd.h \
					   ../blib/AlignedEntry.c  ../blib/AlignedEntry.h \
					   ../blib/ScoringMatrix.c ../blib/ScoringMatrix.h \
					   Filter.c	Filter.h \
					   InputOutputToFiles.c	InputOutputToFiles.h \
					   ParseInput.c	ParseInput.h \
					   Definitions.h

bpostprocess_LDADD = -lm -lz 
