bin_PROGRAMS = bpreprocess

bpreprocess_SOURCES = \
	GenerateIndex.c	GenerateIndex.h \
	../blib/BLib.c	../blib/BLib.h \
	../blib/BReferenceGenome.c	../blib/BReferenceGenome.h \
	../blib/BIndexExons.c	../blib/BIndexExons.h \
	../blib/BIndexLayout.c	../blib/BIndexLayout.h \
	../blib/BIndex.c	../blib/BIndex.h \
	../blib/BMatch.c	../blib/BMatch.h \
	../blib/BMatches.c	../blib/BMatches.h \
	../blib/BRanges.c	../blib/BRanges.h \
	../blib/BError.c	../blib/BError.h \
	ParseInput.c	ParseInput.h \
	Definitions.h
	
bpreprocess_LDADD = -lm
