bin_PROGRAMS = bpreprocess

bpreprocess_SOURCES = \
	GenerateIndex.c	GenerateIndex.h \
	../blib/BLib.c	../blib/BLib.h \
	../blib/RGBinary.c	../blib/RGBinary.h \
	../blib/RGIndexExons.c	../blib/RGIndexExons.h \
	../blib/RGIndexLayout.c	../blib/RGIndexLayout.h \
	../blib/RGIndex.c	../blib/RGIndex.h \
	../blib/RGMatch.c	../blib/RGMatch.h \
	../blib/RGMatches.c	../blib/RGMatches.h \
	../blib/RGRanges.c	../blib/RGRanges.h \
	../blib/BError.c	../blib/BError.h \
	ParseInput.c	ParseInput.h \
	Definitions.h
	
bpreprocess_LDADD = -lm -lz
