bin_PROGRAMS = brepair

brepair_SOURCES = \
	ParseInput.c	ParseInput.h \
	../blib/BError.c	../blib/BError.h \
	../blib/BLib.c	../blib/BLib.h \
	../blib/RGMatches.c	../blib/RGMatches.h \
	../blib/RGMatch.c	../blib/RGMatch.h \
	../blib/RGRanges.c	../blib/RGRanges.h \
	../blib/RGBinary.c	../blib/RGBinary.h \
	../blib/RGIndex.c	../blib/RGIndex.h \
    ../blib/RGIndexExons.c  ../blib/RGIndexExons.h \
	../blib/AlignedRead.c	../blib/AlignedRead.h \
	../blib/AlignedEnd.c	../blib/AlignedEnd.h \
	../blib/AlignedEntry.c	../blib/AlignedEntry.h \
	../blib/ScoringMatrix.c	../blib/ScoringMatrix.h \
	../balign/AlignNTSpace.c	../balign/AlignNTSpace.h \
	../balign/AlignColorSpace.c	../balign/AlignColorSpace.h \
	../balign/Align.c		../balign/Align.h \
	RunRepair.c	RunRepair.h \
	Repair.c	Repair.h 
	
brepair_LDADD = -lm 
