bin_PROGRAMS = bafconvert \
			   balignmentscoredistribution \
			   balignsim \
			   bevalsim \
			   bexonify \
			   bfix \
			   bfixhash \
			   bgeneratereads \
			   berrordistribution \
			   bheader \
			   bindexdist \
			   bindexhist \
			   bmergesorted \
			   bmfconvert \
			   bpairedenddist \
			   brepeat \
			   breport \
			   brg2fasta \
			   bsort \
			   btestindexes \
			   btranslocations

bafconvert_SOURCES = \
					 ../blib/BError.c	../blib/BError.h \
					 ../blib/RGIndexExons.c  ../blib/RGIndexExons.h \
					 ../blib/RGIndex.c	../blib/RGIndex.h \
					 ../blib/BLib.c	../blib/BLib.h \
					 ../blib/RGBinary.c ../blib/RGBinary.h \
					 ../blib/RGMatch.c ../blib/RGMatch.h \
					 ../blib/RGRanges.c ../blib/RGRanges.h \
					 ../blib/AlignedRead.c	../blib/AlignedRead.h \
					 ../blib/AlignedReadConvert.c	../blib/AlignedReadConvert.h \
					 ../blib/AlignedEnd.c	../blib/AlignedEnd.h \
					 ../blib/AlignedEntry.c	../blib/AlignedEntry.h \
					 bafconvert.c bafconvert.h

bafconvert_LDADD =

balignmentscoredistribution_SOURCES = \
									  ../blib/BError.c	../blib/BError.h \
									  ../blib/RGIndexExons.c  ../blib/RGIndexExons.h \
									  ../blib/RGIndex.c	../blib/RGIndex.h \
									  ../blib/BLib.c	../blib/BLib.h \
									  ../blib/RGBinary.c ../blib/RGBinary.h \
									  ../blib/RGMatch.c ../blib/RGMatch.h \
									  ../blib/RGRanges.c ../blib/RGRanges.h \
									  ../blib/AlignedRead.c	../blib/AlignedRead.h \
									  ../blib/AlignedReadConvert.c	../blib/AlignedReadConvert.h \
									  ../blib/AlignedEnd.c	../blib/AlignedEnd.h \
									  ../blib/AlignedEntry.c	../blib/AlignedEntry.h \
									  balignmentscoredistribution.c balignmentscoredistribution.h

balignmentscoredistribution_LDADD =

balignsim_SOURCES = \
					SimRead.c	SimRead.h \
					../blib/BError.c	../blib/BError.h \
					../blib/RGIndexExons.c  ../blib/RGIndexExons.h \
					../blib/RGIndex.c	../blib/RGIndex.h \
					../blib/BLib.c	../blib/BLib.h \
					../blib/RGBinary.c ../blib/RGBinary.h \
					../blib/RGMatch.c ../blib/RGMatch.h \
					../blib/RGMatches.c	../blib/RGMatches.h \
					../blib/RGRanges.c ../blib/RGRanges.h \
					../blib/AlignedRead.c	../blib/AlignedRead.h \
					../blib/AlignedEnd.c	../blib/AlignedEnd.h \
					../blib/RGIndexAccuracy.c	../blib/RGIndexAccuracy.h \
					../blib/AlignedEntry.c	../blib/AlignedEntry.h \
					../balign/RunAligner.c	../balign/RunAligner.h \
					../blib/ScoringMatrix.c	../blib/ScoringMatrix.h \
					../balign/Align.c	../balign/Align.h \
					../balign/AlignColorSpace.c	../balign/AlignColorSpace.h \
					../balign/AlignNTSpace.c	../balign/AlignNTSpace.h \
					../balign/Definitions.h \
					balignsim.c	balignsim.h

balignsim_LDADD =

bevalsim_SOURCES = \
				   ../blib/BError.c	../blib/BError.h \
				   ../blib/RGIndexExons.c  ../blib/RGIndexExons.h \
				   ../blib/RGIndex.c	../blib/RGIndex.h \
				   ../blib/BLib.c	../blib/BLib.h \
				   ../blib/RGBinary.c ../blib/RGBinary.h \
				   ../blib/RGRanges.c ../blib/RGRanges.h \
				   ../blib/RGMatches.c ../blib/RGMatches.h \
				   ../blib/RGMatch.c ../blib/RGMatch.h \
				   ../blib/AlignedRead.c	../blib/AlignedRead.h \
				   ../blib/AlignedEnd.c	../blib/AlignedEnd.h \
				   ../blib/AlignedEntry.c	../blib/AlignedEntry.h \
				   bevalsim.c	bevalsim.h

bevalsim_LDADD = 

bexonify_SOURCES = \
				   ../blib/BError.c	../blib/BError.h \
				   ../blib/RGIndexExons.c  ../blib/RGIndexExons.h \
				   ../blib/RGIndex.c	../blib/RGIndex.h \
				   ../blib/BLib.c	../blib/BLib.h \
				   ../blib/RGBinary.c ../blib/RGBinary.h \
				   ../blib/RGMatch.c ../blib/RGMatch.h \
				   ../blib/RGRanges.c ../blib/RGRanges.h \
				   bexonify.c	bexonify.h

bexonify_LDADD =

bfix_SOURCES = \
			   ../blib/BError.c	../blib/BError.h \
			   ../blib/RGIndexExons.c  ../blib/RGIndexExons.h \
			   ../blib/RGIndex.c	../blib/RGIndex.h \
			   ../blib/BLib.c	../blib/BLib.h \
			   ../blib/RGBinary.c ../blib/RGBinary.h \
			   ../blib/RGMatch.c ../blib/RGMatch.h \
			   ../blib/RGRanges.c ../blib/RGRanges.h \
			   bfix.c	bfix.h 

bfix_LDADD =  

bfixhash_SOURCES = \
				   ../blib/BError.c	../blib/BError.h \
				   ../blib/RGIndexExons.c  ../blib/RGIndexExons.h \
				   ../blib/RGIndex.c	../blib/RGIndex.h \
				   ../blib/BLib.c	../blib/BLib.h \
				   ../blib/RGBinary.c ../blib/RGBinary.h \
				   ../blib/RGMatch.c ../blib/RGMatch.h \
				   ../blib/RGRanges.c ../blib/RGRanges.h \
				   bfixhash.c	bfixhash.h

bfixhash_LDADD =

bgeneratereads_SOURCES = \
						 ../blib/BError.c	../blib/BError.h \
						 ../blib/RGIndexExons.c  ../blib/RGIndexExons.h \
						 ../blib/RGIndex.c	../blib/RGIndex.h \
						 ../blib/BLib.c	../blib/BLib.h \
						 ../blib/RGBinary.c ../blib/RGBinary.h \
						 ../blib/RGMatch.c ../blib/RGMatch.h \
						 ../blib/RGRanges.c ../blib/RGRanges.h \
						 SimRead.c	SimRead.h \
						 bgeneratereads.c	bgeneratereads.h 

bgeneratereads_LDADD =  

berrordistribution_SOURCES = \
							 ../blib/AlignedEnd.c	../blib/AlignedEnd.h \
							 ../blib/AlignedEntry.c	../blib/AlignedEntry.h \
							 ../blib/AlignedRead.c	../blib/AlignedRead.h \
							 ../blib/BError.c	../blib/BError.h \
							 ../blib/RGIndexExons.c  ../blib/RGIndexExons.h \
							 ../blib/RGIndex.c	../blib/RGIndex.h \
							 ../blib/BLib.c	../blib/BLib.h \
							 ../blib/RGBinary.c ../blib/RGBinary.h \
							 ../blib/RGMatch.c ../blib/RGMatch.h \
							 ../blib/RGRanges.c ../blib/RGRanges.h \
							 berrordistribution.c	berrordistribution.h 

berrordistribution_LDADD =  

bheader_SOURCES = \
				  ../blib/BError.c	../blib/BError.h \
				  ../blib/RGIndexExons.c  ../blib/RGIndexExons.h \
				  ../blib/RGIndex.c	../blib/RGIndex.h \
				  ../blib/BLib.c	../blib/BLib.h \
				  ../blib/RGBinary.c ../blib/RGBinary.h \
				  ../blib/RGMatch.c ../blib/RGMatch.h \
				  ../blib/RGRanges.c ../blib/RGRanges.h \
				  bheader.c	bheader.h 

bheader_LDADD =  

bindexdist_SOURCES = \
					 ../blib/BError.c	../blib/BError.h \
					 ../blib/RGIndexExons.c  ../blib/RGIndexExons.h \
					 ../blib/RGIndex.c	../blib/RGIndex.h \
					 ../blib/BLib.c	../blib/BLib.h \
					 ../blib/RGBinary.c ../blib/RGBinary.h \
					 ../blib/RGMatch.c ../blib/RGMatch.h \
					 ../blib/RGRanges.c ../blib/RGRanges.h \
					 ../blib/RGReads.c	../blib/RGReads.h \
					 bindexdist.c	bindexdist.h

bindexdist_LDADD =

bindexhist_SOURCES = \
					 ../blib/BError.c	../blib/BError.h \
					 ../blib/RGIndexExons.c  ../blib/RGIndexExons.h \
					 ../blib/RGIndex.c	../blib/RGIndex.h \
					 ../blib/BLib.c	../blib/BLib.h \
					 ../blib/RGBinary.c ../blib/RGBinary.h \
					 ../blib/RGMatch.c ../blib/RGMatch.h \
					 ../blib/RGRanges.c ../blib/RGRanges.h \
					 ../blib/RGReads.c	../blib/RGReads.h \
					 bindexhist.c	bindexhist.h

bindexhist_LDADD =

bmergesorted_SOURCES = \
					   ../blib/BError.c	../blib/BError.h \
					   ../blib/RGIndexExons.c  ../blib/RGIndexExons.h \
					   ../blib/RGIndex.c	../blib/RGIndex.h \
					   ../blib/BLib.c	../blib/BLib.h \
					   ../blib/RGBinary.c ../blib/RGBinary.h \
					   ../blib/RGMatch.c ../blib/RGMatch.h \
					   ../blib/RGMatches.c ../blib/RGMatches.h \
					   ../blib/RGRanges.c ../blib/RGRanges.h \
					   ../blib/RGReads.c	../blib/RGReads.h \
					   ../blib/AlignedRead.c	../blib/AlignedRead.h \
					   ../blib/AlignedEnd.c	../blib/AlignedEnd.h \
					   ../blib/AlignedEntry.c	../blib/AlignedEntry.h \
					   bmergesorted.c	bmergesorted.h

bmergesorted_LDADD =

bmfconvert_SOURCES = \
					 ../blib/BError.c	../blib/BError.h \
					 ../blib/RGIndexExons.c  ../blib/RGIndexExons.h \
					 ../blib/RGIndex.c	../blib/RGIndex.h \
					 ../blib/BLib.c	../blib/BLib.h \
					 ../blib/RGBinary.c ../blib/RGBinary.h \
					 ../blib/RGMatch.c ../blib/RGMatch.h \
					 ../blib/RGMatches.c ../blib/RGMatches.h \
					 ../blib/RGRanges.c ../blib/RGRanges.h \
					 ../blib/RGReads.c	../blib/RGReads.h \
					 bmfconvert.c	bmfconvert.h

bmfconvert_LDADD =

bpairedenddist_SOURCES = \
						 ../blib/BError.c	../blib/BError.h \
						 ../blib/RGIndexExons.c  ../blib/RGIndexExons.h \
						 ../blib/RGIndex.c	../blib/RGIndex.h \
						 ../blib/BLib.c	../blib/BLib.h \
						 ../blib/RGBinary.c ../blib/RGBinary.h \
						 ../blib/RGMatch.c ../blib/RGMatch.h \
						 ../blib/RGMatches.c ../blib/RGMatches.h \
						 ../blib/RGRanges.c ../blib/RGRanges.h \
						 ../blib/RGReads.c	../blib/RGReads.h \
						 ../blib/AlignedRead.c	../blib/AlignedRead.h \
						 ../blib/AlignedEnd.c	../blib/AlignedEnd.h \
						 ../blib/AlignedEntry.c	../blib/AlignedEntry.h \
						 bpairedenddist.c	bpairedenddist.h

bpairedenddist_LDADD =

brepeat_SOURCES = \
				  ../blib/BError.c	../blib/BError.h \
				  ../blib/RGIndexExons.c  ../blib/RGIndexExons.h \
				  ../blib/RGIndex.c	../blib/RGIndex.h \
				  ../blib/BLib.c	../blib/BLib.h \
				  ../blib/RGBinary.c ../blib/RGBinary.h \
				  ../blib/RGMatch.c ../blib/RGMatch.h \
				  ../blib/RGRanges.c ../blib/RGRanges.h \
				  brepeat.c	brepeat.h

brepeat_LDADD = 

breport_SOURCES = \
				  ../blib/AlignedEnd.c	../blib/AlignedEnd.h \
				  ../blib/AlignedEntry.c	../blib/AlignedEntry.h \
				  ../blib/AlignedRead.c	../blib/AlignedRead.h \
				  ../blib/BError.c	../blib/BError.h \
				  ../blib/RGIndexExons.c  ../blib/RGIndexExons.h \
				  ../blib/RGIndex.c	../blib/RGIndex.h \
				  ../blib/BLib.c	../blib/BLib.h \
				  ../blib/RGBinary.c ../blib/RGBinary.h \
				  ../blib/RGMatch.c ../blib/RGMatch.h \
				  ../blib/RGMatches.c ../blib/RGMatches.h \
				  ../blib/RGRanges.c ../blib/RGRanges.h \
				  ../blib/RGReads.c	../blib/RGReads.h \
				  breport.c	breport.h

breport_LDADD =

brg2fasta_SOURCES = \
				  ../blib/BError.c	../blib/BError.h \
				  ../blib/BLib.c	../blib/BLib.h \
				  ../blib/RGIndex.c	../blib/RGIndex.h \
				  ../blib/RGBinary.c ../blib/RGBinary.h \
				  ../blib/RGMatch.c ../blib/RGMatch.h \
				  ../blib/RGMatches.c ../blib/RGMatches.h \
				  ../blib/RGRanges.c ../blib/RGRanges.h \
				  ../blib/RGReads.c	../blib/RGReads.h \
				  brg2fasta.c

bsort_SOURCES = \
				../blib/AlignedEnd.c	../blib/AlignedEnd.h \
				../blib/AlignedEntry.c	../blib/AlignedEntry.h \
				../blib/AlignedRead.c	../blib/AlignedRead.h \
				../blib/BError.c	../blib/BError.h \
				../blib/RGIndexExons.c  ../blib/RGIndexExons.h \
				../blib/RGIndex.c	../blib/RGIndex.h \
				../blib/BLib.c	../blib/BLib.h \
				../blib/RGBinary.c ../blib/RGBinary.h \
				../blib/RGMatch.c ../blib/RGMatch.h \
				../blib/RGMatches.c ../blib/RGMatches.h \
				../blib/RGRanges.c ../blib/RGRanges.h \
				../blib/RGReads.c	../blib/RGReads.h \
				bsort.c	bsort.h

bsort_LDADD =

btestindexes_SOURCES = \
					   ../blib/RGRanges.c ../blib/RGRanges.h \
					   ../blib/RGBinary.c ../blib/RGBinary.h \
					   ../blib/RGIndex.c	../blib/RGIndex.h \
					   ../blib/RGIndexAccuracy.c	../blib/RGIndexAccuracy.h \
					   ../blib/BError.c	../blib/BError.h \
					   ../blib/BLib.c	../blib/BLib.h \
					   btestindexes.c	btestindexes.h

btestindexes_LDADD =

btranslocations_SOURCES = \
						  ../blib/AlignedEnd.c	../blib/AlignedEnd.h \
						  ../blib/AlignedEntry.c	../blib/AlignedEntry.h \
						  ../blib/AlignedRead.c	../blib/AlignedRead.h \
						  ../blib/BError.c	../blib/BError.h \
						  ../blib/RGIndexExons.c  ../blib/RGIndexExons.h \
						  ../blib/RGIndex.c	../blib/RGIndex.h \
						  ../blib/BLib.c	../blib/BLib.h \
						  ../blib/RGBinary.c ../blib/RGBinary.h \
						  ../blib/RGMatch.c ../blib/RGMatch.h \
						  ../blib/RGMatches.c ../blib/RGMatches.h \
						  ../blib/RGRanges.c ../blib/RGRanges.h \
						  ../blib/RGReads.c	../blib/RGReads.h \
						  btranslocations.c btranslocations.h

btranslocations_LDADD = 
